Fix callout spacing.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -512,6 +512,10 @@ textarea {
 			}
 		}
 	}
+	// KG Callout
+	.kg-callout-card {
+		margin-bottom: 4rem;
+	}
 	// KG Image
 	.kg-image-card {
 		margin: 0 0 4rem;
